--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,16 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7.1"
     }
+
 }
 
 apply plugin: 'war'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: "org.sonarqube"
 
 group = 'com.uleska.testbank'
 version = '0.0.1-SNAPSHOT'
